tests/NormalTests/paczka1/fuzzy1/96139430.err
Error in line 1: E719 A343 80,9
Error in line 2: ApkFFBX S536 93,7
Error in line 12: ApkFFBX S927 12,8
Error in line 21: S927 A343 55,2
Error in line 15: ApkFFBX A413 560,5
Error in line 25: ApkFFBX S927 57,5
Error in line 29: sAI0h S536 86,7
